--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "start:react": "react-scripts start",
     "prebuild": "npm run build:tailwind",
     "build": "react-scripts build",
+    "cypress": "cypress open",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -44,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cypress": "^4.5.0"
   }
 }
