Add delay to react start script to prevent a bug when running concurrently package via npm run dev. Improve comments.

--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,7 @@
     "build:tailwind": "postcss src/tailwind.css -o src/tailwind.generated.css",
     "watch:tailwind": "postcss -w src/tailwind.css -o src/tailwind.generated.css",
     "start": "run-p watch:tailwind start:react",
-    "start:react": "react-scripts start",
+    "start:react": "sleep 2 && react-scripts start",
     "prebuild": "npm run build:tailwind",
     "build": "react-scripts build",
     "cypress": "cypress open",
