--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,13 @@
     "@testing-library/user-event": "^7.2.1",
     "autoprefixer": "^9.7.6",
     "carousel": "0.0.3",
+    "leaflet": "^1.6.0",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-leaflet": "^2.7.0",
     "react-quill": "^1.3.5",
     "react-responsive-carousel": "^3.2.5",
     "react-router-dom": "^5.1.2",
