--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^4.5.0"
+    "cypress": "^4.5.0",
+    "cypress-react-unit-test": "^4.4.0"
   }
 }
