--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "config": "^3.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.9.12",
-    "react-transition-group": "^1.2.1"
+    "mongoose": "^5.9.12"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
