--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "config": "^3.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.9.12"
+    "mongoose": "^5.9.12",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
