--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "aws-sdk": "^2.731.0",
     "config": "^3.3.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "install": "^0.13.0",
     "mongoose": "^5.9.12",
     "multer": "^1.4.2",
-    "multer-s3": "^2.9.0"
+    "multer-s3": "^2.9.0",
+    "npm": "^6.14.7"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
