--- a/client/package.json
+++ b/client/package.json
@@ -3,28 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^2.1.2",
+    "@fullhuman/postcss-purgecss": "^2.3.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "autoprefixer": "^9.7.6",
+    "autoprefixer": "^9.8.6",
     "carousel": "0.0.3",
-    "leaflet": "^1.6.0",
+    "leaflet": "^1.7.1",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^7.1.1",
+    "postcss-cli": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-icons": "^3.10.0",
+    "react-icons": "^3.11.0",
     "react-leaflet": "^2.7.0",
     "react-quill": "^1.3.5",
-    "react-responsive-carousel": "^3.2.5",
-    "react-router-dom": "^5.1.2",
+    "react-responsive-carousel": "^3.2.10",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.4.1",
-    "tailwindcss": "^1.3.5"
+    "tailwindcss": "^1.8.10"
   },
   "scripts": {
-    "build:tailwind": "postcss src/tailwind.css -o src/tailwind.generated.css",
+    "build:tailwind": "NODE_ENV=production postcss src/tailwind.css -o src/tailwind.generated.css",
     "watch:tailwind": "postcss -w src/tailwind.css -o src/tailwind.generated.css",
     "start": "run-p watch:tailwind start:react",
     "start:react": "sleep 2 && react-scripts start",
@@ -50,7 +50,7 @@
     ]
   },
   "devDependencies": {
-    "cypress": "^4.5.0",
-    "cypress-react-unit-test": "^4.4.0"
+    "cypress": "^4.12.1",
+    "cypress-react-unit-test": "^4.14.4"
   }
 }
