--- a/client/package.json
+++ b/client/package.json
@@ -27,15 +27,13 @@
     "build:tailwind": "postcss src/tailwind.css -o src/tailwind.generated.css",
     "watch:tailwind": "postcss -w src/tailwind.css -o src/tailwind.generated.css",
     "start": "run-p watch:tailwind start:react",
-    "start:react": "ping -n 4 127.0.0.1 >NUL && react-scripts start",
+    "start:react": "sleep 3 && react-scripts start",
     "prebuild": "npm run build:tailwind",
     "build": "react-scripts build",
     "cypress": "cypress open",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-
-
   "eslintConfig": {
     "extends": "react-app"
   },
